# kick-toolkit

./: .env.example  .gitignore  README.md  docker-compose.yml
kick-backend/: pyproject.toml
kick-backend/alembic/: env.py
kick-backend/alembic/versions/: 001_initial_schema.py
kick-backend/app/: dependencies.py  main.py
kick-backend/app/models/: analytics.py  antialt.py  bot.py  clips.py  coach.py  engagement.py  giveaway.py  heatmap.py  intelligence.py  marketplace.py  schemas.py  subscription.py  tournament.py  whitelabel.py
kick-backend/app/repositories/: __init__.py  achievements.py  analytics.py  antialt.py  anticheat.py  banned.py  base.py  behavior.py  bot.py  chatlogs.py  clips.py  creative.py  dashboard.py  debrief.py  discord_bot.py  fingerprint.py  gambling.py  game_challenges.py  game_queue.py  giveaway.py  heatmap.py  highlights.py  ideas.py  irl.py  kd_counter.py  loyalty.py  marketplace.py  match_history.py  notifications.py  overlays.py  polls.py  predictions.py  profiles.py  rank_tracker.py  revenue.py  schedule.py  songs.py  stream_coach.py  stream_intel.py  subscription.py  (+7 more)
kick-backend/app/routers/: achievements.py  activity.py  analytics.py  antialt.py  anticheat.py  auth.py  bot.py  chatlogs.py  clips.py  creative.py  debrief.py  discord_bot.py  gambling.py  game_challenges.py  game_queue.py  giveaway.py  heatmap.py  highlights.py  ideas.py  irl.py  kd_counter.py  loyalty.py  marketplace.py  match_history.py  overlays.py  polls.py  predictions.py  (+14 more)
kick-backend/tests/: test_auth.py  test_dependencies.py  test_risk_scoring.py  test_schema.py
(+134 files in other folders)
